--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>WELCOME</title>
+		<title>Issue Tracker</title>
 		<link rel="stylesheet" type="text/css" href="http://getbootstrap.com/dist/css/bootstrap.min.css" />
 	</head>
 	<body>
 		<div class="container">
-			<h2>Github Repository Open Issue Count</h2>
+			<h2>This is a program to count open issues</h2>
 			<div class="row clearfix">
 				<div class="col-md-12">
 					<form action="/" method="POST">
